Added divs to grid

--- a/index.html
+++ b/index.html
@@ -27,28 +27,76 @@
 
 
   <!-- Random Link Image
-  –––––––––––––––––––––––––––––––––––––––––––––––––– 
+  ––––––––––––––––––––––––––––––––––––––––––––––––––
   <link rel="image_src" href="http://orange-gaming.org/icon" />
 
   <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– 
+  ––––––––––––––––––––––––––––––––––––––––––––––––––
   <link rel="icon" type="image/png" href="http://orange-gaming.org/icon" />
   -->
 
 
 </head>
 <body>
-<div class="topHeader">
-</div>
-<div class="tileHolder">
-  <div class="tile one">
+  <div class="topHeader">
+
   </div>
-  
-</div>
+
+  <div class="main-grid">
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+    <div class="tile w-one-third h-one-fifth">
+    </div>
+
+  </div>
 
 
 </body>
-<script>
 
-</script>
 </html>
+
+
+
+
+
