--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
 
 
 
@@ -93,6 +94,10 @@
 
 
 </body>
+
+<script type="application/javascript">
+  grid_init();
+</script>
 
 </html>
 
