Scalability and Grid change

--- a/modules/time.html
+++ b/modules/time.html
@@ -25,17 +25,23 @@
         display: none;
     }
   body {
-    font-size: 6em;
+    font-size: 24vh;
   }
   @media (min-width: 351px) {
         .date {
             display: block;
         }
         body {
-            font-size: 6.5em;
+            font-size: 20vw;
         }
-
     }
+  @media (min-height: 351px) {  
+  body {
+    font-size: 20vw;
+  }
+  
+  }
+
 </style>
 <script type="application/javascript">
 
