--- a/modules/matrix.html
+++ b/modules/matrix.html
@@ -84,8 +84,9 @@ function draw()
     //translucent BG to show trail
     ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
     ctx.fillRect(0, 0, c.width, c.height);
-    if (!query.color) {
+    if (typeof query.color == 'undefined') {
         ctx.fillStyle = 'rgb(' + [r,g,b].join(',') + ')'; //green text
+        colorInc()
     }   
     else {
         ctx.fillStyle = query.color;
