--- a/userConfig/index.html
+++ b/userConfig/index.html
@@ -152,15 +152,24 @@ setTimeout(function(){
 function addModule(number){
   if(typeof number == 'undefined')
   {
+    if(getGridVal(currentBox) == 1)
+    {
+      return;
+    }
     $(".addBox").before(newModule())
     $("."+currentBox+"_p").css("top",(Math.floor(currentBox / 3) * 305) + yOrigin);
     $("."+currentBox+"_p").css("left",(currentBox % 3 * 305) + xOrigin);
     $("."+currentBox+"_p > select").change(function() {
       changeModule(this.className, this.selectedOptions[0].value);
     });
+    changeGrid(currentBox, 1)
     currentBox++;
   }
   else {
+    if(getGridVal(number) == 1)
+    {
+      return;
+    }
     $(".addBox").before(newModule(number))
     $("."+number+"_p").css("top",(Math.floor(number / 3) * 305) + yOrigin);
     $("."+number+"_p").css("left",(number % 3 * 305) + xOrigin);
@@ -168,9 +177,10 @@ function addModule(number){
       changeModule(this.className, this.selectedOptions[0].value);
       //console.log(this.className, this.selectedOptions[0].value)
     });    
+    changeGrid(number, 1)
   }
 }
-var grid = [[[1,1],[1,1],[1,1]],[[1,1],[1,1],[1,1]],[[1,1],[1,1],[1,1]],[[1,1],[1,1],[1,1]],[[1,1],[1,1],[1,1]]]
+var grid = [[0,0,0],[0,0,0],[0,0,0],[0,0,0],[0,0,0]]
 function changeModule(boxNumber, moduleName){
 
   //console.log(boxNumber, moduleName)
@@ -179,7 +189,7 @@ function changeModule(boxNumber, moduleName){
   {
     return;
   }
-  $("."+boxNumber).after("<div class='"+boxNumber+"forms'></div>")
+  $("."+boxNumber).after("<div class='"+boxNumber+"forms forms'></div>")
   var i, j;
   var moduleObj = mList.moduleParams[moduleName]
   var listName;
@@ -201,17 +211,16 @@ function changeModule(boxNumber, moduleName){
     }
     $("."+boxNumber+"forms").append(toAppend)
   }
-  $("."+boxNumber+"forms").append("Tile Size [Max "+(3-(boxNumber % 3))+"x"+(5 - (boxNumber % 5))+"]:")
+  $("."+boxNumber+"forms").append("Tile Size [Max "+(3-(boxNumber % 3))+"x"+(5 - Math.floor((boxNumber / 3))+"]:"))
   $("."+boxNumber+"forms").append("<div class='"+boxNumber+"tileSize'></div>");
-  $("."+boxNumber+"tileSize").html("<input maxlength='1' onchange='checkKeyPress(this)' onkeypress='return event.charCode >= 49 && event.charCode <= "+(51 - (boxNumber % 3))+"' placeholder='Tile Width' id='"+boxNumber+"width'><input maxlength='1' onchange='checkKeyPress(this)' onkeypress='return event.charCode >= 49 && event.charCode <= "+(53 - (boxNumber % 5))+"' placeholder='Tile Height' id='"+boxNumber+"height'>")
+  $("."+boxNumber+"tileSize").html("<input maxlength='1' onchange='checkKeyPress(this)' onkeypress='return event.charCode >= 49 && event.charCode <= "+(51 - (boxNumber % 3))+"' placeholder='Tile Width' value='1' id='"+boxNumber+"width'><input maxlength='1' onchange='checkKeyPress(this)' onkeypress='return event.charCode >= 49 && event.charCode <= "+(53 - Math.floor((boxNumber / 3)))+"' placeholder='Tile Height' value='1' id='"+boxNumber+"height'>")
 }
-
 function checkKeyPress(obj)
 {
   var width = obj.id.search("width") + 1
   var height = obj.id.search("height") + 1
   var value = $("#"+obj.id).val();
-  var boxNumber;
+  var boxNumber1;
   a = obj;
   var j;
   var k;
@@ -219,64 +228,25 @@ function checkKeyPress(obj)
   var diff;
   if(width)
   {
-    boxNumber = obj.id.split("width")[0]
-    var location = boxToGrid(boxNumber);
-    diff = value - grid[location[0]][location[1]][0];
-    if (diff > 0)
-    {
-      grid[location[0]][location[1]][0] = value;
-      var current = grid[location[0]][location[1]]
-      $("."+boxNumber+"_p").css("width",300*current[0])
-      for(j = location[0]; j < location[0] + value; j++)
-      {
-        for(k = location[1]; k < (current[1]); k++)
-        {
-          if(!(j == location[0] && k == location[1]))
-          {
-            removeModule(((k*3)+j));
-            console.log(((k*3)+j))
-          }
-        } 
-      }
-    }
-    else {
-      diff *= -1;
-      grid[location[0]][location[1]][0] = value;
-      var current = grid[location[0]][location[1]]
-      $("."+boxNumber+"_p").css("width",300*current[0])
-      console.log("diff"+diff);
-      for(k = Number(location[0]) + Number(value) + Number(diff); k >= location[0] + value -1; k--)
-      {
-        console.log("k: "+k)
-        for(l = Number(location[1]); l < (current[1]); l++)
-        {
-          console.log("k: "+l)
-          if(!(k == location[0] && l == location[1]))
-          {
-            console.log("AddedModule at: "+boxToGrid((l*3)+k))
-            addModule(((l*3)+k));
-          }
-        } 
-      }      
-    }
+
+    boxNumber1 = obj.id.split("width")[0]
   }
   else if(height)
   {
-    boxNumber = obj.id.split("height")[0]
-    var location = boxToGrid(boxNumber);
-    grid[location[0]][location[1]][1] = value;
-    var current = grid[location[0]][location[1]]
-
-    $("."+boxNumber+"_p").css("height",300*current[1])
-    for(j = location[0]; j < current[0]; j++)
+    boxNumber1 = obj.id.split("height")[0]
+  }
+  width = Number($("#"+boxNumber1+"width").val());
+  height = Number($("#"+boxNumber1+"height").val());
+  console.log("Width, height: " + width + ", " + height);
+  for (k = 0; k < width; k++)
+  {
+    for (l = 0; l < (height * 3); l += 3)
     {
-      for(k = location[1]; k < (location[1]+value); k++)
+      if (!(k == 0 && l == 0))
       {
-        if(!(j == location[0] && k == location[1]))
-        {
-          removeModule((k*3)+j)
-        }
-      } 
+       removeModule(Number(boxNumber1) + k + l);
+       repairEdges(boxNumber1, width, height);
+      }
     }
   }
 }
@@ -285,13 +255,73 @@ function removeModule(boxNumber)
   if(typeof $("."+boxNumber+"_p")[0] !== 'undefined')
   {
     $("."+boxNumber+"_p").remove()
+    changeGrid(boxNumber, 0)
   }
 }
-function boxToGrid(number)
+function dispGrid()
 {
-  return [number % 3,Math.floor(number / 3)]
+  console.log(grid[0])
+  console.log(grid[1])
+  console.log(grid[2])
+  console.log(grid[3])
+  console.log(grid[4])
 }
+function changeGrid(number, value)
+{
+  grid[Math.floor(number/3)][number % 3] = value
+}
+function getGridVal(number)
+{
+  return grid[Math.floor(number/3)][number % 3]
+}
+function repairEdges(number, width, height)
+{
 
+}
+/*
+    boxNumber1 = obj.id.split("height")[0]
+    var location = boxToGrid(boxNumber1);
+    diff = value - grid[location[0]][location[1]][0];
+    if(diff > 0)
+    {
+      grid[location[0]][location[1]][1] = value;
+      var current = grid[location[0]][location[1]]
+
+      $("."+boxNumber1+"_p").css("height",300*current[1])
+      for(j = location[0]; j < current[0]; j++)
+      {
+        for(k = location[1]; k < (location[1]+value); k++)
+        {
+          if(!(j == location[0] && k == location[1]))
+          {
+            removeModule((k*3)+j)
+          }
+        } 
+      }
+    }
+    else {
+      diff *= -1;
+
+
+      grid[location[0]][location[1]][1] = value;
+      var current = grid[location[0]][location[1]]
+
+      $("."+boxNumber1+"_p").css("height",300*current[1])
+      for(j = location[0]; j < current[0]; j++)
+      {
+        for(k = Number(location[1])+Number(value); k < (Number(location[1])+Number(value)+Number(diff)); k++)
+        {
+          if(!(j == location[0] && k == location[1]))
+          {
+            console.log("AddedModule at: "+boxToGrid((k*3)+l))
+            console.log("Location is at "+l+","+k)
+            addModule((k*3)+j)
+          }
+        } 
+      }
+
+
+    }*/
 </script>
 </body>
 
