--- a/userConfig/index.html
+++ b/userConfig/index.html
@@ -386,8 +386,16 @@ function sizeToString(width, height){
 function sendData(){
   var module = getModule();
   var config = getConfig();
-  $.post("http://molee.me:4050/user/john/update", {grid: module, config: config})
+  $.post("http://molee.me:4050/user/"+urlParam("name")+"/update", {grid: module, config: config})
   console.log(module, config)
+}
+function urlParam(name) {
+    var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
+    if (results==null){
+       return null;
+    } else {
+       return results[1] || 0;
+    }
 }
 </script>
 </body>
