Cleaned up page, added no user support

--- a/public/index.html
+++ b/public/index.html
@@ -1,62 +1,41 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <!-- Basic Page Needs
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta charset="utf-8">
+    <title>MirrorMirror</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>MirrorMirror</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <!-- Mobile Specific Metas
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=0.9">
+    <!-- CSS
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/custom.css">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-   <link rel="stylesheet" href="css/normalize.css">
-   <link rel="stylesheet" href="css/custom.css">
+    <!-- Scripts
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="js/main.js"></script>
 
-  <!-- Scripts
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  </head>
+  <body>
+    <div class="topHeader">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="js/main.js"></script>
+    </div>
 
+    <div class="main-grid">
 
-  <!-- Random Link Image
-  ––––––––––––––––––––––––––––––––––––––––––––––––––
-  <link rel="image_src" href="http://orange-gaming.org/icon" />
-  -->
+    </div>
 
-  <!-- Favicon
-  ––––––––––––––––––––––––––––––––––––––––––––––––––
-  <link rel="icon" type="image/png" href="http://orange-gaming.org/icon" />
-  -->
-
-
-</head>
-<body>
-  <div class="topHeader">
-
-  </div>
-
-  <div class="main-grid">
-
-
-
-  </div>
-
-<script type="application/javascript">
-  grid_init();
-  config_load();
-</script>
-
-</body>
-
-
+    <script type="application/javascript">
+      init(urlParam('user')); 
+    </script>
+  </body>
 </html>
 
 
